# xf86-video-loongson

./: .gitignore  ChangeLog  Makefile.am  README  README.md  configure.ac
conf/: 20-etnaviv.conf  20-gsgpu.conf  20-loongson.conf  20-lsdc.conf  Makefile.am  loongson_old.conf
man/: loongson.man
src/: Makefile.am  box.c  box.h  dri2.c  dri3.c  driver.c  driver.h  drmmode_crtc_config.c  drmmode_crtc_config.h  drmmode_display.c  drmmode_display.h  drmmode_output.c  drmmode_output.h  drmmode_uevent.c  dumb_bo.c  dumb_bo.h  etnaviv.c  etnaviv_device.c  etnaviv_device.h  etnaviv_dri3.c  etnaviv_dri3.h  etnaviv_exa.c  etnaviv_exa.h  etnaviv_resolve.h  etnaviv_resolve_generic.c  etnaviv_resolve_lsx.c  etnaviv_resolve_msa.c  fake_exa.c  fake_exa.h  gsgpu_bo_helper.c  gsgpu_bo_helper.h  gsgpu_device.c  gsgpu_device.h  gsgpu_dri2.c  gsgpu_dri2.h  gsgpu_dri3.c  gsgpu_dri3.h  gsgpu_exa.c  gsgpu_exa.h  gsgpu_resolve.c  (+54 more)
